<resources>
    <string name="app_name">NotificacionesOreo</string>
    <string name="tvTitle">Title</string>
    <string name="etTitle">Title</string>
    <string name="tvMessage">Message</string>
    <string name="etMessage">Message</string>
    <string name="switchImp">Importance</string>
    <string name="button">Send</string>
    <string name="title_activity_details">DetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>